[package]
name = "mccs"
version = "0.2.0" # keep in sync with README and html_root_url
authors = ["arcnmx"]
edition = "2018"

description = "VESA Monitor Control Command Set"
keywords = ["ddc", "mccs", "vcp", "vesa"]

documentation = "https://docs.rs/mccs"
repository = "https://github.com/arcnmx/mccs-rs"
readme = "README.md"
license = "MIT"

[workspace]
members = ["caps", "db"]

[badges]
travis-ci = { repository = "arcnmx/mccs-rs" }
maintenance = { status = "passively-maintained" }
