[package]
name = "mccs"
version = "0.1.0" # keep in sync with README and html_root_url
authors = ["arcnmx"]

description = "VESA Monitor Control Command Set"
keywords = ["ddc", "mccs", "vcp", "vesa"]
categories = ["hardware-support"]

documentation = "https://docs.rs/mccs"
repository = "https://github.com/arcnmx/mccs-rs"
readme = "README.md"
license = "MIT"

[workspace]
members = ["caps", "db"]

[badges]
travis-ci = { repository = "arcnmx/mccs-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
void = { version = "^1.0.2", optional = true }

[features]
default = ["void"]
