[package]
name = "mccs"
version = "0.1.3" # keep in sync with README and html_root_url
authors = ["arcnmx"]

description = "VESA Monitor Control Command Set"
keywords = ["ddc", "mccs", "vcp", "vesa"]
categories = ["hardware-support"]

documentation = "https://docs.rs/mccs"
repository = "https://github.com/arcnmx/mccs-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[workspace]
members = ["caps", "db"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
void = { version = "^1.0.2", optional = true }

[features]
default = ["void"]
