[package]
name = "mccs-caps"
version = "0.2.0" # keep in sync with README and html_root_url
authors = ["arcnmx"]
edition = "2018"

description = "MCCS capability string parser"
keywords = ["ddc", "mccs", "vcp", "vesa"]

documentation = "https://docs.rs/mccs-caps"
repository = "https://github.com/arcnmx/mccs-rs"
readme = "../README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/mccs-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
mccs = { version = "0.2", path = "../" }
nom = "3.2"
