[package]
name = "mccs-caps"
version = "0.1.3" # keep in sync with html_root_url
authors = ["arcnmx"]

description = "MCCS capability string parser"
keywords = ["ddc", "mccs", "vcp", "vesa"]
categories = ["hardware-support", "parser-implementations"]

documentation = "https://docs.rs/mccs-caps"
repository = "https://github.com/arcnmx/mccs-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mccs = { version = "0.1", path = "../" }
nom = "3"

[features]
test-nom-errors = ["nom/verbose-errors"]
