[package]
name = "mccs-db"
version = "0.2.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2021"

description = "MCCS specification VCP database"
keywords = ["ddc", "mccs", "vcp", "vesa"]
categories = ["hardware-support"]

documentation = "https://docs.rs/mccs-db"
repository = "https://github.com/arcnmx/mccs-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/data/**",
	"/README*",
	"/COPYING*",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mccs = { version = "0.2", path = "../" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
nom = "7"

[dev-dependencies]
mccs-caps = { version = "0.2", path = "../caps" }
