[package]
name = "mccs-db"
version = "0.1.3" # keep in sync with html_root_url
authors = ["arcnmx"]

description = "MCCS specification VCP database"
keywords = ["ddc", "mccs", "vcp", "vesa"]
categories = ["hardware-support"]

documentation = "https://docs.rs/mccs-db"
repository = "https://github.com/arcnmx/mccs-rs"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/mccs-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
mccs = { version = "^0.1.0", path = "../" }
serde = "^1.0.33"
serde_derive = "^1.0.33"
serde_yaml = "^0.7.3"
nom = "^3.2.1"

[dev-dependencies]
mccs-caps = { version = "^0.1.0", path = "../caps" }
